商品添加完成，未测试

--- a/yanxuan_parent/yanxuan_seller_server/src/main/webapp/pages/goods/edit.html
+++ b/yanxuan_parent/yanxuan_seller_server/src/main/webapp/pages/goods/edit.html
@@ -126,20 +126,12 @@
                 <!-- 展示类目关联的规格 -->
                 <div class="row">
                     <table class="table">
-                        <tr>
-                            <th class="text-center">颜色</th>
+                        <tr ng-repeat="spec in specList">
+                            <th class="text-center">{{spec.name}}</th>
                             <td>
-                                <input type="checkbox" name="color" value="black"/> 黑色
-                                <input type="checkbox" name="color" value="red"/> 红色
-                                <input type="checkbox" name="color" value="aurora"/> 极光色
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="text-center">尺寸</th>
-                            <td>
-                                <input type="checkbox" name="size" value="5.1"/> 5.1寸
-                                <input type="checkbox" name="size" value="5.5"/> 5.5寸
-                                <input type="checkbox" name="size" value="6.0"/> 6.0寸
+                                <span ng-repeat="option in spec.optionList">
+                                    <input type="checkbox" ng-click="getSpecCheckedList($event, spec.name, option.name)"/> {{option.name}}
+                                </span>
                             </td>
                         </tr>
                     </table>
@@ -152,51 +144,23 @@
                     <table class="table text-center">
                         <thead>
                         <tr>
-                            <th>颜色</th>
-                            <th>尺寸</th>
+                            <th ng-repeat="item in entity.specCheckedList track by $index">{{item.specName}}</th>
                             <th>价格</th>
                             <th>库存量</th>
                             <th>操作</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td>极光色</td>
-                            <td>5.1寸</td>
+                        <tr ng-repeat="sku in entity.skuList">
+                            <td ng-repeat="item in entity.specCheckedList track by $index">{{sku.specs[item.specName]}}</td>
                             <td>
-                                <input type="text" name="price" class="form-control"/>
+                                <input type="text" name="price" class="form-control" ng-model="sku.price"/>
                             </td>
                             <td>
-                                <input type="text" name="count" class="form-control"/>
+                                <input type="text" name="count" class="form-control" ng-model="sku.stockCount"/>
                             </td>
                             <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#skuPicModal" >上传图片</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>极光色</td>
-                            <td>5.5寸</td>
-                            <td>
-                                <input type="text" name="price" class="form-control"/>
-                            </td>
-                            <td>
-                                <input type="text" name="count" class="form-control"/>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#skuPicModal" >上传图片</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>极光色</td>
-                            <td>6.0寸</td>
-                            <td>
-                                <input type="text" name="price" class="form-control"/>
-                            </td>
-                            <td>
-                                <input type="text" name="count" class="form-control"/>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#skuPicModal" >上传图片</button>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#skuPicModal" ng-click="uploadSkuPic($index)">上传图片</button>
                             </td>
                         </tr>
                         </tbody>
@@ -216,7 +180,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title" id="goodsPicLabel">SKU图片</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="destoryUpload('goodsPic')">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -224,7 +188,7 @@
                 <div id="goodsPic"></div>
             </div>
             <div class="modal-footer text-center">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" >关闭</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="destoryUpload('goodsPic')">关闭</button>
             </div>
         </div>
     </div>
@@ -235,7 +199,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title" id="newModalLabel">SKU图片</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" >
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="destoryUpload('skuPic')">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -243,7 +207,7 @@
                 <div id="skuPic"></div>
             </div>
             <div class="modal-footer text-center">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" >关闭</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="destoryUpload('skuPic')">关闭</button>
             </div>
         </div>
     </div>
